LeetCode HOT100: 回溯